--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>3-column preview card component</title>
 </head>
 <body>
-    <a class="gitlink" href="">
+    <a class="gitlink" href="https://github.com/richardcreatech/Richards-Three-Columns.git">
         <i class="fa-brands fa-github-alt"></i> GitHub
     </a>
 
